@@ -9,7 +9,6 @@
 
 import ConfigParser
 from constants import const
-from lib import eventHandler
 import lib
 import os
 
@@ -25,11 +24,10 @@ class config(object):
 
 
     def __init__(self):
-        self.user = {}
-        self.dirs = {}
-        self.onFirstTime = eventHandler()
-        self.onError = eventHandler()
+        self.data = {}  #{"user": {"name":"", "email":""}, "dirs": {}}
+        self.onFirstTime = False
         self.__file = os.path.expanduser("~")+"/"+const.CONFIG_FILE
+        self.initDefaults()
 
 
 
@@ -39,22 +37,42 @@ class config(object):
     def load(self):
         #
         if not os.path.isfile(self.__file):
-            self.onFirstTime.raiseEvent()
+            self.onFirstTime = True
             return(False)
         config = ConfigParser.SafeConfigParser()
         try:
             config.read([self.__file])
-            self.user["name"] = config.get("user","name")
-            self.user["email"] = config.get("user", "email")
-            self.dirs["cd"] = config.get("dirs", "cd")
-            self.dirs["alt"] = config.get("dirs", "alt")
-            self.dirs["output"] = config.get("dirs", "output")
-            self.dirs["root"] = config.get("dirs", "root")
+            self.data[const.OPT_USER_KEY][const.OPT_USERNAME_KEY] = config.get(const.OPT_USER_KEY,const.OPT_USERNAME_KEY)
+            self.data[const.OPT_USER_KEY][const.OPT_USEREMAIL_KEY] = config.get(const.OPT_USER_KEY, const.OPT_USEREMAIL_KEY)
+            self.data[const.OPT_DIRS_KEY][const.OPT_BPASODIR_KEY] = config.get(const.OPT_DIRS_KEY, const.OPT_BPASODIR_KEY)
+            self.data[const.OPT_DIRS_KEY][const.OPT_BALTDIR_KEY] = config.get(const.OPT_DIRS_KEY, const.OPT_BALTDIR_KEY)
+            self.data[const.OPT_DIRS_KEY][const.OPT_BCDDIR_KEY] = config.get(const.OPT_DIRS_KEY, const.OPT_BCDDIR_KEY)
+            self.data[const.OPT_DIRS_KEY][const.OPT_BOUTDIR_KEY] = config.get(const.OPT_DIRS_KEY, const.OPT_BOUTDIR_KEY)
+            self.data[const.OPT_DIRS_KEY][const.OPT_PPASODIR_KEY] = config.get(const.OPT_DIRS_KEY, const.OPT_PPASODIR_KEY)
+            self.data[const.OPT_DIRS_KEY][const.OPT_PALTDIR_KEY] = config.get(const.OPT_DIRS_KEY, const.OPT_PALTDIR_KEY)
+            self.data[const.OPT_DIRS_KEY][const.OPT_PCDDIR_KEY] = config.get(const.OPT_DIRS_KEY, const.OPT_PCDDIR_KEY)
+            self.data[const.OPT_DIRS_KEY][const.OPT_PROOTDIR_KEY] = config.get(const.OPT_DIRS_KEY, const.OPT_PROOTDIR_KEY)
         except:
-            self.onError.raiseEvent()
             return(False)
         return(True)
 
+
+
+
+
+    def initDefaults(self):
+        self.data[const.OPT_USER_KEY] = {}
+        self.data[const.OPT_DIRS_KEY] = {}
+        self.data[const.OPT_USER_KEY][const.OPT_USERNAME_KEY] = os.getenv("LOGNAME")
+        self.data[const.OPT_USER_KEY][const.OPT_USEREMAIL_KEY] = ""
+        self.data[const.OPT_DIRS_KEY][const.OPT_BPASODIR_KEY] = os.path.expanduser("~")
+        self.data[const.OPT_DIRS_KEY][const.OPT_BALTDIR_KEY] = ""
+        self.data[const.OPT_DIRS_KEY][const.OPT_BCDDIR_KEY] = "/media"
+        self.data[const.OPT_DIRS_KEY][const.OPT_BOUTDIR_KEY] = os.path.expanduser("~")
+        self.data[const.OPT_DIRS_KEY][const.OPT_PPASODIR_KEY] = os.path.expanduser("~")
+        self.data[const.OPT_DIRS_KEY][const.OPT_PALTDIR_KEY] = ""
+        self.data[const.OPT_DIRS_KEY][const.OPT_PCDDIR_KEY] = "/media"
+        self.data[const.OPT_DIRS_KEY][const.OPT_PROOTDIR_KEY] = "/"
 
 
 
@@ -63,12 +81,17 @@ class config(object):
         #
         raw = "#This is PASO Configuration File"
         raw += "\n\n[user]"
-        raw += "\nname = "+self.user["name"]
-        raw += "\nemail = "+self.user["email"]
+        raw += "\nname = "+self.data[const.OPT_USER_KEY][const.OPT_USERNAME_KEY]
+        raw += "\nemail = "+self.data[const.OPT_USER_KEY][const.OPT_USEREMAIL_KEY]
         raw += "\n\n[dirs]"
-        for key in self.dirs.keys():
-            raw += "\n"+key+" = "+self.dirs[key]
-        return(lib.savefile(self.__file, raw))
+        for key in self.data[const.OPT_DIRS_KEY].keys():
+            raw += "\n"+key+" = "+self.data[const.OPT_DIRS_KEY][key]
+        if not lib.savefile(self.__file, raw):
+            return(False)
+        return(True)
+
+
+
 
 
 
