@@ -1,4 +1,6 @@
-2009-11-16 Ali erkan İMREK <alierkanimrek.gmail.com>
+2009-11-22 Ali Erkan İMREK <alierkanimrek.gmail.com>
+	 * .conf File support and Options dialog added
+2009-11-16 Ali Erkan İMREK <alierkanimrek.gmail.com>
 	 * Version 0.1 released
 2009-10-24 Ali Erkan İMREK <alierkanimrek.gmail.com>
          * First upload 
